package pattern;

public interface Button {
    void render();
}
