package pattern;

public class WebButton implements Button {
    public void render() { System.out.println("Boton HTML renderizado en navegador"); }
}
