package pattern;

public class WebDialog extends Dialog {
    protected Button createButton() { return new WebButton(); }
}
