package pattern;

public class WindowsButton implements Button {
    public void render() { System.out.println("Boton Windows con estilo nativo"); }
}
