@startuml
title Factory Method - Ejemplo 3 - solucion para dialogos multiplataforma
left to right direction
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #334155
  ArrowColor #334155
  FontColor #0F172A
}
hide empty members

package "main" #EEF2FF {
  class Main <<cliente>>
}

package "pattern" #ECFDF5 {
  interface Button <<interfaz>> {
  }
  abstract class Dialog {
  }
  class WebButton {
    +render(): void
  }
  class WebDialog {
  }
  class WindowsButton {
    +render(): void
  }
  class WindowsDialog {
  }
}

Button <|.. WebButton
Dialog <|-- WebDialog
Button <|.. WindowsButton
Dialog <|-- WindowsDialog
Button ..> WebButton : crea
Button ..> WindowsButton : crea
Dialog ..> WebButton : crea
Dialog ..> WindowsButton : crea
WebButton ..> WindowsButton : crea
WebDialog ..> WebButton : crea
WebDialog ..> WindowsButton : crea
WindowsDialog ..> WindowsButton : crea
Main ..> Dialog : ejecuta

note bottom
La implementacion esta concentrada en src/pattern/PatternImplementation.java.
Main solo instancia y ejecuta el caso de uso.
end note
@enduml
